Fix align right of search box input with rechercher btn and table

--- a/app/assets/stylesheets/pages/instruction-habilitations-index.css
+++ b/app/assets/stylesheets/pages/instruction-habilitations-index.css
@@ -10,7 +10,7 @@
 
 .search-box .search-inputs > .input {
   flex-basis: 25%;
-  padding: 5px;
+  padding: 1rem 0 1rem 1rem;
 }
 
 .search-box .search-inputs > .input:first-child {
@@ -19,6 +19,6 @@
 }
 
 .search-box .actions {
-  margin-top: -15px;
+  margin: -1rem 0 0.5rem 0;
   text-align: right;
 }
